--- a/source/_posts/个人站点建设历程.md
+++ b/source/_posts/个人站点建设历程.md
@@ -12,6 +12,13 @@ tags:
 整个过程由倒叙的形式实现，以方便查看最新进展。另外，为了避免整个文章过于冗长，不涉及具体实现。
 另有文章《个人站点建设计划》配套。
 
+
+## 2016.5.28
+> 添加网站图标zero，图标来源于**[icomoon](https://icomoon.io/)**和**[flaticon](http://www.flaticon.com/)**，参考**[设置网站图标](http://theme-next.iissnan.com/faqs.html)**
+> 更换字体，参考**[设置字体](http://theme-next.iissnan.com/theme-settings.html)**.
+
+<!--more-->
+
 ## 2016.5.27
 > 添加《个人站点建设历程》以及《个人站点建设计划》
 
