--- a/source/_posts/个人站点建设历程.md
+++ b/source/_posts/个人站点建设历程.md
@@ -15,7 +15,8 @@ tags:
 
 ## 2016.5.28
 > 添加网站图标zero，图标来源于**[icomoon](https://icomoon.io/)**和**[flaticon](http://www.flaticon.com/)**，参考**[设置网站图标](http://theme-next.iissnan.com/faqs.html)**
-> 更换字体，参考**[设置字体](http://theme-next.iissnan.com/theme-settings.html)**.
+> 更换logo字体，参考**[设置字体](http://theme-next.iissnan.com/theme-settings.html)**.
+> 将谷歌主题库更换为360CDN，参考[HEXO博客Next主题优化](http://gondole.me/2016/01/22/Hexo%E5%8D%9A%E5%AE%A2Next%E4%B8%BB%E9%A2%98%E4%BC%98%E5%8C%96/)以及[issue 806](https://github.com/iissnan/hexo-theme-next/issues/806)
 
 <!--more-->
 
