--- a/source/_posts/2016年阅读书单.md
+++ b/source/_posts/2016年阅读书单.md
@@ -1,7 +1,7 @@
 ---
 title: 2016年阅读书单
 date: 2016-06-09 14:43:47
-categories: [记录]
+categories: [记录, non-work]
 tags:
 ---
 
@@ -9,6 +9,8 @@ tags:
 书籍 | 状态 | 作者 | 时间
 ------------ | ------------- | ------------- | -------------
 深入理解Linux虚拟内存管理 | 在读 | | 2016.5.25
+深入Linux设备驱动程序内核机制 | 在读 | 陈学松 | 2016.6.18
+C和指针(POINTERS ON C) | 复习，完成 | Kenneth A. Reek | 2016.6.16 - 2016.6.18
 
 # 非技术
 书籍 | 状态 | 作者 | 时间
