--- a/source/_posts/个人站点建设历程.md
+++ b/source/_posts/个人站点建设历程.md
@@ -12,6 +12,8 @@ tags:
 整个过程由倒叙的形式实现，以方便查看最新进展。另外，为了避免整个文章过于冗长，不涉及具体实现。
 另有文章《个人站点建设计划》配套。
 
+## 2016.6.20
+> 添加[hexo-pdf](https://github.com/superalsrk/hexo-pdf/)插件
 
 ## 2016.5.28
 > 添加网站图标zero，图标来源于**[icomoon](https://icomoon.io/)**和**[flaticon](http://www.flaticon.com/)**，参考**[设置网站图标](http://theme-next.iissnan.com/faqs.html)**
@@ -19,7 +21,6 @@ tags:
 > 将谷歌主题库更换为360CDN，参考[HEXO博客Next主题优化](http://gondole.me/2016/01/22/Hexo%E5%8D%9A%E5%AE%A2Next%E4%B8%BB%E9%A2%98%E4%BC%98%E5%8C%96/)以及[issue 806](https://github.com/iissnan/hexo-theme-next/issues/806)
 
 <!--more-->
-
 ## 2016.5.27
 > 添加《个人站点建设历程》以及《个人站点建设计划》
 
