--- a/source/_posts/个人站点建设历程.md
+++ b/source/_posts/个人站点建设历程.md
@@ -12,6 +12,11 @@ tags:
 整个过程由倒叙的形式实现，以方便查看最新进展。另外，为了避免整个文章过于冗长，不涉及具体实现。
 另有文章《个人站点建设计划》配套。
 
+## 2016.6.26
+> 添加阿里云网站监控点
+> [阿里云监控网站](https://www.aliyun.com/product/jiankong/)
+> [参考](https://www.freehao123.com/aliyun-jiankong/)
+
 ## 2016.6.20
 > 添加[hexo-pdf](https://github.com/superalsrk/hexo-pdf/)插件
 
