--- a/source/_posts/2016年阅读书单.md
+++ b/source/_posts/2016年阅读书单.md
@@ -16,3 +16,4 @@ C和指针(POINTERS ON C) | 复习，完成 | Kenneth A. Reek | 2016.6.16 - 2016
 书籍 | 状态 | 作者 | 时间
 ------------ | ------------- | ------------- | -------------
 白夜行 | 完成 | 东野圭吾 | 2016.4.20
+重新定义团队 - Google如何工作 | 在读 | Laszlo Bock | 2016.7.3
